# HFMidiLib

./: CMakeLists.txt  README.txt
HFMidiLib/: device.cpp  device.h  devicedescription.cpp  devicedescription.h  driver.cpp  driver.h  framework.cpp  framework.h  port.cpp  port.h
HFMidiLib/OS/: midilinux.cpp  midilinux.h  midiwin.cpp  midiwin.h
demo/: CMakeLists.txt
demo/src/: Icons.qrc  MyMidi.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mididevicestree.cpp  mididevicestree.h  midieventlistwidget.cpp  midieventlistwidget.h  miditestsource.cpp  miditestsource.h  miditestsource.ui  qlabeldroptarget.cpp  qlabeldroptarget.h
